--- a/smartLib_app/smartlib/templates/index.html
+++ b/smartLib_app/smartlib/templates/index.html
@@ -54,7 +54,7 @@
     <div id="contact-form-popup" class="contact-hidden">
         <form id="contact-form">
             {% csrf_token %}
-            <span class="close-btn" onclick="toggleContactForm()">×</span>
+            <span class="close-btn" onclick="toggleContactForm()"></span>
             <div class="input_box">
                 <label>Name</label>
                 <input type="text" name="name" placeholder="Enter name" required><br>
