--- a/smartLib_app/smartlib/templates/login.html
+++ b/smartLib_app/smartlib/templates/login.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 {% load static %}
-<html>
-
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Login</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{% static 'css/stylesheet.css' %}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
-
 <body>
+
+    <div class="header">
+        <nav class="nav-container">
+            <div class="nav-left">
+                <a href="{% url 'index' %}">Home</a>
+                <a href="{% url 'contact' %}">Contact</a>
+            </div>
+            <div class="nav-right">
+                <a href="{% url 'signup' %}" class="btn-header-left">Sign up</a>
+            </div>
+        </nav>
+    </div>
+
     <div class="form_container">
         <form method="post">
             {% csrf_token %}
@@ -20,9 +32,6 @@
                         {% for error in field.errors %}
                             <li>{{ field.label }}: {{ error }}</li>
                         {% endfor %}
-                    {% endfor %}
-                    {% for error in form.non_field_errors %}
-                        <li>{{ error }}</li>
                     {% endfor %}
                 </ul>
             {% endif %}
@@ -41,9 +50,12 @@
             </div>
 
             <button type="submit">Log In</button>
-            <p class="sign_up">Don't have an account? <a href="{% url 'signup' %}">Sign up</a></p>
+
+            <p class="sign_up">
+                Don't have an account? <a href="{% url 'signup' %}">Sign up</a>
+            </p>
         </form>
     </div>
-</body>
 
+</body>
 </html>
