--- a/smartLib_app/smartlib/templates/index.html
+++ b/smartLib_app/smartlib/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
-<html lang="en">
+<html>
 
 <head>
     <title>SmartLib</title>
@@ -40,7 +40,7 @@
                 <option value="title">Title</option>
                 <option value="author">Author</option>
             </select>
-            <button type="submit">Search</button>
+            <button id="search-button" type="button">Search</button>
         </form>
     </div>
 
@@ -65,8 +65,8 @@
                 <label>Subject</label>
                 <input type="text" name="subject" placeholder="Enter subject topic" required><br>
 
-                <label>Your Message:</label><br>
-                <textarea name="message" rows="5" cols="30" placeholder="Type your message here..." required></textarea><br>
+                <label>Your Message:</label>
+                <textarea name="message" rows="3" cols="30" placeholder="Type your message here..." required></textarea><br>
 
                 <input type="submit" value="Send message">
                 <p id="form-response" style="margin-top: 10px; font-size: 14px;"></p>
